Cleaned up code using FindBugs.